tests/dataset/tpc-h/compiler/cpp/q8.error
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:86:12: error: ‘l’ was not declared in this scope
   86 |   decltype(l) l;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:86:12: error: ‘l’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:87:12: error: ‘p’ was not declared in this scope
   87 |   decltype(p) p;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:87:12: error: ‘p’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:89:12: error: ‘o’ was not declared in this scope
   89 |   decltype(o) o;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:89:12: error: ‘o’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:90:12: error: ‘c’ was not declared in this scope
   90 |   decltype(c) c;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:90:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:91:12: error: ‘n’ was not declared in this scope
   91 |   decltype(n) n;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:91:12: error: ‘n’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:92:12: error: ‘r’ was not declared in this scope
   92 |   decltype(r) r;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:92:12: error: ‘r’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:95:24: error: ‘o’ was not declared in this scope
   95 |   decltype(std::string(o.o_orderdate).substr(0, (4) - (0))) key;
      |                        ^
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:95:24: error: ‘o’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:282:12: error: conversion from ‘vector<std::unordered_map<std::__cxx11::basic_string<char>, int>>’ to non-scalar type ‘vector<std::__cxx11::basic_string<char>>’ requested
  282 |       std::vector<decltype(std::unordered_map<std::string, decltype(1000)>{
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  283 |           {std::string("s_suppkey"), 1000}})>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  284 |           std::unordered_map<std::string, decltype(1000)>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  285 |               {std::string("s_suppkey"), 1000}},
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  286 |           std::unordered_map<std::string, decltype(2000)>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  287 |               {std::string("s_suppkey"), 2000}}};
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:301:20: error: ‘class std::__cxx11::basic_string<char>’ has no member named ‘s_suppkey’
  301 |           if (!((s.s_suppkey == l.l_suppkey)))
      |                    ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:33: error: no match for ‘operator==’ (operand types are ‘int’ and ‘std::__cxx11::basic_string<char>’)
  323 |                     if (__g.key == __key) {
      |                         ~~~~~~~ ^~ ~~~~~
      |                             |      |
      |                             int    std::__cxx11::basic_string<char>
In file included from /usr/include/x86_64-linux-gnu/c++/13/bits/c++allocator.h:33,
                 from /usr/include/c++/13/bits/allocator.h:46,
                 from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:3:
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<char>&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘const std::__new_allocator<_Tp>’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/algorithm:60,
                 from /tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:2:
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::pair<_T1, _T2>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67:
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
In file included from /usr/include/c++/13/iosfwd:42,
                 from /usr/include/c++/13/ios:40:
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::fpos<_StateT>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::allocator<_CharT>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const _CharT*’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::tuple<_UTypes ...>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
In file included from /usr/include/c++/13/bits/locale_facets.h:48,
                 from /usr/include/c++/13/bits/basic_ios.h:37,
                 from /usr/include/c++/13/ios:46:
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::istreambuf_iterator<_CharT, _Traits>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
In file included from /usr/include/c++/13/map:63,
                 from /tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:4:
/usr/include/c++/13/bits/stl_map.h:1513:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1513 |     operator==(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1513:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::map<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
In file included from /usr/include/c++/13/map:64:
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1134 |     operator==(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
In file included from /usr/include/c++/13/unordered_map:41,
                 from /tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:7:
/usr/include/c++/13/bits/unordered_map.h:2143:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2143 |     operator==(const unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2143:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2157 |     operator==(const unordered_multimap<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:323:36: note:   mismatched types ‘const std::vector<_Tp, _Alloc>’ and ‘int’
  323 |                     if (__g.key == __key) {
      |                                    ^~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<char>&, const allocator<char>&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘int’ to ‘const std::allocator<char>&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:324:50: error: cannot convert ‘Lineitem’ to ‘int’ in initialization
  324 |                       __g.items.push_back(Result{l, p, s, o, c, n, r});
      |                                                  ^
      |                                                  |
      |                                                  Lineitem
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:332:52: error: cannot convert ‘Lineitem’ to ‘int’ in initialization
  332 |                         std::vector<Result>{Result{l, p, s, o, c, n, r}}});
      |                                                    ^
      |                                                    |
      |                                                    Lineitem
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:332:72: error: no matching function for call to ‘std::vector<Result>::vector(<brace-enclosed initializer list>)’
  332 |                         std::vector<Result>{Result{l, p, s, o, c, n, r}}});
      |                                                                        ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = Result; _Alloc = std::allocator<Result>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>; std::__type_identity_t<_Alloc> = std::allocator<Result>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>; std::__type_identity_t<_Alloc> = std::allocator<Result>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = Result; _Alloc = std::allocator<Result>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; size_type = long unsigned int; value_type = Result; allocator_type = std::allocator<Result>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; size_type = long unsigned int; allocator_type = std::allocator<Result>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Result; _Alloc = std::allocator<Result>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:351:41: error: lambda-expression in unevaluated context only available with ‘-std=c++20’ or ‘-std=gnu++20’
  351 |                   std::vector<decltype(([&]() {
      |                                         ^
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:358:24: error: template argument 1 is invalid
  358 |                   })())>
      |                        ^
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:358:24: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:361:29: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  361 |                     __items.push_back(([&]() {
      |                             ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:362:39: error: request for member ‘n_name’ in ‘x.Result::n’, which is of non-class type ‘int’
  362 |                       auto __v = (x.n.n_name == target_nation);
      |                                       ^~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:364:37: error: request for member ‘l_extendedprice’ in ‘x.Result::l’, which is of non-class type ‘int’
  364 |                         return (x.l.l_extendedprice * ((1 - x.l.l_discount)));
      |                                     ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:364:65: error: request for member ‘l_discount’ in ‘x.Result::l’, which is of non-class type ‘int’
  364 |                         return (x.l.l_extendedprice * ((1 - x.l.l_discount)));
      |                                                                 ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:350:19:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:349:44: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  349 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                          ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:349:55: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  349 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                     ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:374:48: error: request for member ‘l_extendedprice’ in ‘std::declval<Result>().Result::l’, which is of non-class type ‘int’
  374 |                       std::declval<Result>().l.l_extendedprice *
      |                                                ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:375:54: error: request for member ‘l_discount’ in ‘std::declval<Result>().Result::l’, which is of non-class type ‘int’
  375 |                       ((1 - std::declval<Result>().l.l_discount))))>
      |                                                      ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:374:48: error: request for member ‘l_extendedprice’ in ‘std::declval<Result>().Result::l’, which is of non-class type ‘int’
  374 |                       std::declval<Result>().l.l_extendedprice *
      |                                                ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:375:54: error: request for member ‘l_discount’ in ‘std::declval<Result>().Result::l’, which is of non-class type ‘int’
  375 |                       ((1 - std::declval<Result>().l.l_discount))))>
      |                                                      ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:375:68: error: template argument 1 is invalid
  375 |                       ((1 - std::declval<Result>().l.l_discount))))>
      |                                                                    ^
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:375:68: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:378:29: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  378 |                     __items.push_back(
      |                             ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:379:30: error: request for member ‘l_extendedprice’ in ‘x.Result::l’, which is of non-class type ‘int’
  379 |                         (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                              ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:379:58: error: request for member ‘l_discount’ in ‘x.Result::l’, which is of non-class type ‘int’
  379 |                         (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                          ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:372:19:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:371:44: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  371 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                          ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:371:55: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  371 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                     ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:344:24: error: no matching function for call to ‘std::vector<std::pair<int, __struct9> >::push_back(<brace-enclosed initializer list>)’
  344 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  345 |           {year.key,
      |           ~~~~~~~~~~    
  346 |            __struct9{
      |            ~~~~~~~~~~   
  347 |                year.key,
      |                ~~~~~~~~~
  348 |                (([&](auto v) {
      |                ~~~~~~~~~~~~~~~
  349 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  350 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  351 |                   std::vector<decltype(([&]() {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  352 |                     auto __v =
      |                     ~~~~~~~~~~
  353 |                         (std::declval<Result>().n.n_name == target_nation);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  354 |                     if (__v == true)
      |                     ~~~~~~~~~~~~~~~~
  355 |                       return (std::declval<Result>().l.l_extendedprice *
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  356 |                               ((1 - std::declval<Result>().l.l_discount)));
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  357 |                     return 0;
      |                     ~~~~~~~~~
  358 |                   })())>
      |                   ~~~~~~
  359 |                       __items;
      |                       ~~~~~~~~
  360 |                   for (auto x : year.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  361 |                     __items.push_back(([&]() {
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  362 |                       auto __v = (x.n.n_name == target_nation);
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  363 |                       if (__v == true)
      |                       ~~~~~~~~~~~~~~~~
  364 |                         return (x.l.l_extendedprice * ((1 - x.l.l_discount)));
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  365 |                       return 0;
      |                       ~~~~~~~~~
  366 |                     })());
      |                     ~~~~~~
  367 |                   }
      |                   ~     
  368 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  369 |                 })()) /
      |                 ~~~~~~~ 
  370 |                 ([&](auto v) {
      |                 ~~~~~~~~~~~~~~
  371 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  372 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  373 |                   std::vector<decltype((
      |                   ~~~~~~~~~~~~~~~~~~~~~~
  374 |                       std::declval<Result>().l.l_extendedprice *
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  375 |                       ((1 - std::declval<Result>().l.l_discount))))>
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  376 |                       __items;
      |                       ~~~~~~~~
  377 |                   for (auto x : year.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  378 |                     __items.push_back(
      |                     ~~~~~~~~~~~~~~~~~~
  379 |                         (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  380 |                   }
      |                   ~     
  381 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  382 |                 })()))}});
      |                 ~~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<int, __struct9>; _Alloc = std::allocator<std::pair<int, __struct9> >; value_type = std::pair<int, __struct9>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<int, __struct9> >::value_type&’ {aka ‘const std::pair<int, __struct9>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<int, __struct9>; _Alloc = std::allocator<std::pair<int, __struct9> >; value_type = std::pair<int, __struct9>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<int, __struct9> >::value_type&&’ {aka ‘std::pair<int, __struct9>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCHQueriesq83953507948/001/prog.cpp:390:5: error: conversion from ‘vector<__struct9>’ to non-scalar type ‘vector<Result>’ requested
  294 |   std::vector<Result> result = ([&]() {
      |                                ~~~~~~~~
  295 |     std::vector<__struct8> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  296 |     for (auto l : lineitem) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~
  297 |       for (auto p : part) {
      |       ~~~~~~~~~~~~~~~~~~~~~
  298 |         if (!((p.p_partkey == l.l_partkey)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  299 |           continue;
      |           ~~~~~~~~~
  300 |         for (auto s : supplier) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~
  301 |           if (!((s.s_suppkey == l.l_suppkey)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  302 |             continue;
      |             ~~~~~~~~~
  303 |           for (auto o : orders) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~
  304 |             if (!((o.o_orderkey == l.l_orderkey)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  305 |               continue;
      |               ~~~~~~~~~
  306 |             for (auto c : customer) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~
  307 |               if (!((c.c_custkey == o.o_custkey)))
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  308 |                 continue;
      |                 ~~~~~~~~~
  309 |               for (auto n : nation) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  310 |                 if (!((n.n_nationkey == c.c_nationkey)))
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  311 |                   continue;
      |                   ~~~~~~~~~
  312 |                 for (auto r : region) {
      |                 ~~~~~~~~~~~~~~~~~~~~~~~
  313 |                   if (!((r.r_regionkey == n.n_regionkey)))
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  314 |                     continue;
      |                     ~~~~~~~~~
  315 |                   if (!((((((p.p_type == target_type) &&
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  316 |                             (o.o_orderdate >= start_date)) &&
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  317 |                            (o.o_orderdate <= end_date)) &&
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  318 |                           (r.r_name == std::string("AMERICA"))))))
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  319 |                     continue;
      |                     ~~~~~~~~~
  320 |                   auto __key = std::string(o.o_orderdate).substr(0, (4) - (0));
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  321 |                   bool __found = false;
      |                   ~~~~~~~~~~~~~~~~~~~~~
  322 |                   for (auto &__g : __groups) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  323 |                     if (__g.key == __key) {
      |                     ~~~~~~~~~~~~~~~~~~~~~~~
  324 |                       __g.items.push_back(Result{l, p, s, o, c, n, r});
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  325 |                       __found = true;
      |                       ~~~~~~~~~~~~~~~
  326 |                       break;
      |                       ~~~~~~
  327 |                     }
      |                     ~
  328 |                   }
      |                   ~
  329 |                   if (!__found) {
      |                   ~~~~~~~~~~~~~~~
  330 |                     __groups.push_back(__struct8{
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  331 |                         __key,
      |                         ~~~~~~
  332 |                         std::vector<Result>{Result{l, p, s, o, c, n, r}}});
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  333 |                   }
      |                   ~
  334 |                 }
      |                 ~
  335 |               }
      |               ~
  336 |             }
      |             ~
  337 |           }
      |           ~
  338 |         }
      |         ~
  339 |       }
      |       ~
  340 |     }
      |     ~
  341 |     std::vector<std::pair<decltype(std::declval<__struct8>().key), __struct9>>
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  342 |         __items;
      |         ~~~~~~~~
  343 |     for (auto &year : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  344 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  345 |           {year.key,
      |           ~~~~~~~~~~
  346 |            __struct9{
      |            ~~~~~~~~~~
  347 |                year.key,
      |                ~~~~~~~~~
  348 |                (([&](auto v) {
      |                ~~~~~~~~~~~~~~~
  349 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  350 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  351 |                   std::vector<decltype(([&]() {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  352 |                     auto __v =
      |                     ~~~~~~~~~~
  353 |                         (std::declval<Result>().n.n_name == target_nation);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  354 |                     if (__v == true)
      |                     ~~~~~~~~~~~~~~~~
  355 |                       return (std::declval<Result>().l.l_extendedprice *
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  356 |                               ((1 - std::declval<Result>().l.l_discount)));
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  357 |                     return 0;
      |                     ~~~~~~~~~
  358 |                   })())>
      |                   ~~~~~~
  359 |                       __items;
      |                       ~~~~~~~~
  360 |                   for (auto x : year.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  361 |                     __items.push_back(([&]() {
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  362 |                       auto __v = (x.n.n_name == target_nation);
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  363 |                       if (__v == true)
      |                       ~~~~~~~~~~~~~~~~
  364 |                         return (x.l.l_extendedprice * ((1 - x.l.l_discount)));
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  365 |                       return 0;
      |                       ~~~~~~~~~
  366 |                     })());
      |                     ~~~~~~
  367 |                   }
      |                   ~
  368 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  369 |                 })()) /
      |                 ~~~~~~~
  370 |                 ([&](auto v) {
      |                 ~~~~~~~~~~~~~~
  371 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  372 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  373 |                   std::vector<decltype((
      |                   ~~~~~~~~~~~~~~~~~~~~~~
  374 |                       std::declval<Result>().l.l_extendedprice *
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  375 |                       ((1 - std::declval<Result>().l.l_discount))))>
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  376 |                       __items;
      |                       ~~~~~~~~
  377 |                   for (auto x : year.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  378 |                     __items.push_back(
      |                     ~~~~~~~~~~~~~~~~~~
  379 |                         (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  380 |                   }
      |                   ~
  381 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  382 |                 })()))}});
      |                 ~~~~~~~~~~
  383 |     }
      |     ~
  384 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  385 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  386 |     std::vector<__struct9> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  387 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  388 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  389 |     return __res;
      |     ~~~~~~~~~~~~~
  390 |   })();
      |   ~~^~
